unpackaged/main/default/objects/Contact/fields/Average_Rating__c.field-meta.xml
<CustomField>
    <fullName>Average_Rating__c</fullName>
    <label>Average Rating</label>
    <type>TextArea</type>
</CustomField>