unpackaged/main/default/objects/Contact/fields/Contact_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Contact_Relationship__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contact Relationship</label>
    <type>Checkbox</type>
</CustomField>