unpackaged/main/default/objects/Contact/fields/Copy_Address__c.field-meta.xml
<CustomField>
    <fullName>Copy_Address__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Copy Address</label>
    <type>Checkbox</type>
</CustomField>