unpackaged/main/default/objects/Contact/fields/Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Full_Name__c</fullName>
    <label>Full Name</label>
    <length>18</length>
    <type>Text</type>
</CustomField>