unpackaged/main/default/objects/Contact/fields/Source_Contact_Id__c.field-meta.xml
<CustomField>
    <fullName>Source_Contact_Id__c</fullName>
    <label>Source Contact Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>