unpackaged/main/default/objects/Contact/recordTypes/Primary.recordType-meta.xml
<RecordType>
    <fullName>Primary</fullName>
    <active>true</active>
    <label>Primary</label>
</RecordType>