unpackaged/main/default/objects/Contact/validationRules/Contact_Validation_8.validationRule-meta.xml
<ValidationRule>
    <fullName>Contact_Validation_8</fullName>
    <active>false</active>
    <errorConditionFormula>ISBLANK(MailingStreet)</errorConditionFormula>
    <errorMessage>contact Mailing Street Must be provided.</errorMessage>
</ValidationRule>