unpackaged/main/default/objects/Contact/validationRules/ContactPostalZip_9.validationRule-meta.xml
<ValidationRule>
    <fullName>ContactPostalZip_9</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
  OR(
    ISBLANK(MailingCountry),
    MailingCountry = &quot;USA&quot;
  ),
  NOT(
    REGEX(MailingPostalCode, &quot;^[0-9]{5}(-[0-9]{4})?$&quot;)
  )
)</errorConditionFormula>
    <errorDisplayField>MailingPostalCode</errorDisplayField>
    <errorMessage>Zip code must be 5 Digit</errorMessage>
</ValidationRule>