unpackaged/main/default/objects/Contact/validationRules/Validate_contact_7.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_contact_7</fullName>
    <active>false</active>
    <errorConditionFormula>OR( ISBLANK( MailingStreet ) ,
 ISBLANK(MailingCity),
 ISBLANK(MailingCountry))</errorConditionFormula>
    <errorMessage>Mailing Street, Mailing City, and Mailing Country must all be provided</errorMessage>
</ValidationRule>