unpackaged/main/default/objects/Contact/validationRules/Validation_Phone_10.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_Phone_10</fullName>
    <active>false</active>
    <errorConditionFormula>NOT(REGEX( Phone , &#39;[123456789]{10}&#39;))</errorConditionFormula>
    <errorDisplayField>Phone</errorDisplayField>
    <errorMessage>Enter a valid 10 digit phone no with country code</errorMessage>
</ValidationRule>